--- a/.github/workflows/my-workflow.yaml
+++ b/.github/workflows/my-workflow.yaml
@@ -5,12 +5,13 @@ on:
 
 jobs:
   my-job:
-    name: My Job (${{ matrix.hatchet-protocol }})
+    name: My Job (${{ matrix.hatchet-protocol }}, nix_on_tmpfs: ${{ matrix.nix_on_tmpfs }})
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         hatchet-protocol: [holster, carve, cleave, rampage]
+        nix_on_tmpfs: [true, false]
     steps:
       - name: Check out the repository
         uses: actions/checkout@v4
@@ -20,8 +21,10 @@ jobs:
         uses: wimpysworld/nothing-but-nix@v5
         with:
           hatchet-protocol: ${{ matrix.hatchet-protocol }}
-      - name: Install Nix
+      - name: Install Nix (nix_on_tmpfs: ${{ matrix.nix_on_tmpfs }})
         uses: nixbuild/nix-quick-install-action@v30
+        with:
+          nix_on_tmpfs: ${{ matrix.nix_on_tmpfs }}
       - name: Cache Nix environment
         uses: nix-community/cache-nix-action@v6.1.3
         with:
